objects/ABP_Approval__c.object
<CustomObject>
    <fields>
        <fullName>ABP_Owner__c</fullName>
        <description>This Field Populates Owner of the  Associated Account plan</description>
        <label>ABP Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Approval_ID__c</fullName>
        <formula>Account_Plan__r.Name&amp;&quot;-&quot;&amp;TRIM(LEFT(Text( CreatedDate),16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Approval ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Owner__c</fullName>
        <formula>ABP_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Master Detail Relationship Established Between Account Plan and Account plan Approval</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Approvals</relationshipLabel>
        <relationshipName>Account_Plan_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plan_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Account Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted – Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Plan Approval</label>
    <nameField>
        <displayFormat>Approval-{000}</displayFormat>
        <label>Account Plan Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>